[FIX] mail: fix horizontal scrollbar of emoji popover on windows
On windows, displayed emojis are bigger than the expected size
This commit removes the horizontal scrolbar that would appear
on Windows

Task-2991415

closes odoo/odoo#101261

--- a/addons/mail/static/src/components/emoji_grid_view/emoji_grid_view.scss
+++ b/addons/mail/static/src/components/emoji_grid_view/emoji_grid_view.scss
@@ -6,7 +6,7 @@
     height: auto;
     width: auto;
     overflow-y: scroll;
-    overflow-x: visible;
+    overflow-x: hidden;
 }
 
 .o_EmojiGridView_list {
